--- a/JokeServer/Michael Crabtree's Joke Server Checklist.html
+++ b/JokeServer/Michael Crabtree's Joke Server Checklist.html
@@ -110,66 +110,66 @@ Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Maintains state so that all jokes/proverbs are seen before any are repeated. </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Removed all Elliott's comments and added my own extensive comments to JokeServer    </b></td><td align="left"><b>
-No                    </b></td></tr>
+Maybe                    </b></td></tr>
 
 
 <tr> <td align="left"><b>
 Tested with this many clients simultaneously (more than one!)  </b></td><td align="left"><b>
-0                    </b></td></tr>
+2                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Returns four jokes and four proverbs   </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Jokes and Proverbs re-randomized after each cycle </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Labels the jokes and proverbs JA, JB, PC, PD, etc.    </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Performs user name substitution into joke templates </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Admin Client connects at different port    </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Admin client switches server mode from Joke Mode to Proverb Mode    </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Maintains client conversations without interference from other clients    </b></td><td align="left"><b>
 
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 
 <tr> <td align="left"><b>
 Correctly maintains converstations with interleaved Joke/Proverb modes  </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Only have to type user name once on JokeClient  </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Can start JokeServer[s], JokeClient, and JokeClientAdmin in any order </b></td><td align="left"><b>
-No                    </b></td></tr>
+Maybe                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Can start and stop JokeClientAdmin at any time </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 Can run JokeServer and JokeClient without JokeClientAdmin </b></td><td align="left"><b>
-No                    </b></td></tr>
+Yes                    </b></td></tr>
 
 <tr> <td align="left"><b>
 <center> MULTIPLE JOKESERVERS (Ten percent of grade) </center> </b></td><td align="left"><b>
@@ -237,7 +237,8 @@ Explain <i> Maybe </i> entries here also.
 Maybe on whether or not I removed all of Professor Elliots Code. 
 I know I didn't touch his comments on the toText function.
 I might have left in some of his other comments in too.  
-
-
+<br>
+Can start JokeServer[s], JokeClient, and JokeClientAdmin in any order:
+Yes you can but you have to start the Server before continuing any client commands or you'll get a not so pretty java exception
 
 </font></font></font></body></html>
